<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">生旦净末</string>
    <string name="action_settings">Settings</string>
	<string name="name">姓名</string>
	<string name="passwd">密码</string>
	<string name="readName">输入昵称</string>
	<string name="readPasswd">输入密码</string>
	<string name="login">登录</string>
	
	<string name="me">我的</string>
	<string name="find">发现</string>
	<string name="takephoto">抓拍</string>
	<string name="setting">设置</string>
	<string name="home">首页</string>
	
	<string name="register">注册</string>
	<string name="otherlogin">其他账号登录</string>
	<string name="repasswd">再次输入密码</string>
	<string name="sinalogin">新浪微博账号登录</string>
	<string name="qqlogin">QQ账号登录</string>
	<string name="Register">注册</string>
	
	<string name="rectitle">推荐用户</string>
	<string name="hottitle">热门帖子</string>
	<string name="godpost">爆笑</string>
	<string name="newpost">新帖子</string>
    <string name="findsome">找些什么</string>
    <string name="godgag">神吐槽</string>
    <string name="finduser">查找用户</string>
    <string name="findgag">查找帖子</string>
    <string name="gofind">查找</string>
	
	<string name="myPic">个人头像</string>
	<string name="mypost">我的帖子</string>
	<string name="collection">我的收藏</string>
	<string name="fans">我的粉丝</string>
	<string name="ifocus">我的关注</string>
	<string name="mypoint">成就</string>
	<string name="changeinfo">修改信息</string>
	
	<string name="pushmessage">消息提醒</string>
	<string name="clearcache">清空缓存</string>
	<string name="opinion">意见反馈</string>
	<string name="newversion">检查更新</string>
	<string name="aboutsoft">关于软件</string>
	<string name="aboutus">关于我们</string>
	
	<string name="posthint">说些什么吧</string>	
	<string name="post">提交</string>
	<string name="articlegood">赞</string>
	<string name="articlerec">评论</string>
	<string name="articlecollect">收藏</string>
    <string name="focus">关注</string>

    <string name="textpost">纯文字</string>
	<string name="fromfile">从本地图片选择</string>
	<string name="loadmoredata">点击加载更多...</string>
	<string name="refresh">刷新</string>
    <string name="postrec">提交</string>

    <string name="username">用户名:</string>
    <string name="usernickname">用户昵称:</string>
    <string name="userphone">手机号码:</string>
    <string name="useremail">电子邮箱:</string>
    <string name="usersiguration">个性签名:</string>
    <string name="nickwarninfo">以中文或英文字母开头，限4－16个字符，一个汉字为两个字符</string>
    <string name="surebutton">确定</string>
    <string name="signaturewarninfo">个性签名，彰显你的个性</string>

    <string name="allgag">所有</string>
    <string name="puretext">文字</string>
    <string name="havepic">图片</string>
    <string name="school">学校</string>
    <string name="selected">热门</string>

    <string name="idea">快乐无处不在</string>

    <string name="post_takephoto">点击图标抓拍有趣的事情上传分享</string>
    <string name="post_fromphone">点击图标在手机中选择图片上传</string>
    <string name="post_puretext">文本上传，单纯上传文字消息</string>

    <string name="user_home_fans">粉丝</string>
    <string name="user_home_focus">关注</string>
    <string name="user_home_post">发布</string>
    <string name="user_home_info">信息</string>
</resources>
