<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top|center"
    android:orientation="vertical" >
    <include layout="@layout/top_title" />
    <EditText android:id="@+id/name"
        style="@style/edittext"
	    android:hint="@string/readName"
	    android:inputType="text"/>
	<EditText android:id="@+id/passwd"
        style="@style/edittext"
	    android:hint="@string/readPasswd"
	    android:inputType="textPassword"/>
	<EditText android:id="@+id/rePasswd"
        style="@style/edittext"
	    android:hint="@string/repasswd"
	    android:inputType="textPassword"/>
    <Button
        android:id="@+id/Register"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/loginbutonstate"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/butonforeground"
        android:text="@string/Register" />
</LinearLayout>
