<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bottombackground" >
    <include layout="@layout/top_title"/>
	<TextView android:id="@+id/recTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/rectitle"
	    style="@style/title"
	    />
	<GridView android:id="@+id/recPerson"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/red">
	</GridView>
	<TextView android:id="@+id/gridContent"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/newpost"/>
	<TextView android:id="@+id/hotTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/title"
	    android:text="@string/hottitle"/>
	<TextView android:id="@+id/godPost"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/godpost"/>
	<TextView android:id="@+id/newPost"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/newpost"/>
	
</LinearLayout>
