<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView android:id="@+id/image"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/takephoto"/>"
    <EditText android:id="@+id/etPostContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:lines="10"
        android:hint="@string/posthint"/>
	<Button android:id="@+id/btnPost"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/post"/>
</LinearLayout>
