<?xml version="1.0" encoding="UTF-8"?>
<com.crazyfish.extension.ResizeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resizeLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/bottomList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottombackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bottomtopline"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bottomHome"
                style="@style/main_bottom_item">

                <ImageView
                    android:id="@+id/rbHome"
                    style="@style/bottomItemStyle"
                    android:background="@drawable/first" />

                <TextView
                    android:id="@+id/rbHomeText"
                    style="@style/bottomtextstyle"
                    android:text="@string/home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomFind"
                style="@style/main_bottom_item">

                <ImageView
                    android:id="@+id/rbFind"
                    style="@style/bottomItemStyle"
                    android:background="@drawable/find" />

                <TextView
                    android:id="@+id/rbFindText"
                    style="@style/bottomtextstyle"
                    android:text="@string/find" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomCamera"
                style="@style/main_bottom_item">

                <ImageView
                    android:id="@+id/rbTakePhoto"
                    style="@style/bottomItemStyle"
                    android:background="@drawable/post" />

                <TextView
                    android:id="@+id/rbTakePhotoText"
                    style="@style/bottomtextstyle"
                    android:text="@string/takephoto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomMe"
                style="@style/main_bottom_item">

                <ImageView
                    android:id="@+id/rbMe"
                    style="@style/bottomItemStyle"
                    android:background="@drawable/me" />

                <TextView
                    android:id="@+id/rbMeText"
                    style="@style/bottomtextstyle"
                    android:text="@string/me" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomSetting"
                style="@style/main_bottom_item">

                <ImageView
                    android:id="@+id/rbSetting"
                    style="@style/bottomItemStyle"
                    android:background="@drawable/postbuttonstate" />

                <TextView
                    android:id="@+id/rbSettingText"
                    style="@style/bottomtextstyle"
                    android:text="@string/setting" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUserPost"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottombackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/etInputA"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/posthint"
            android:lines="2"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btUserRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postrec" />
    </LinearLayout>
</com.crazyfish.extension.ResizeLayout>