<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/userhomebackground"
    android:orientation="vertical">

    <include layout="@layout/top_title"></include>

    <LinearLayout
        android:id="@+id/llUserHomeTopNav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserHomeNav_info"
                style="@style/userhomenav"
                android:text="@string/user_home_info" />
            <TextView
                style="@style/userhomenavbottomnum"/>
            <LinearLayout
                style="@style/userhomenavbottomline"
                android:background="@color/red"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserHomeNav_fans"
                style="@style/userhomenav"
                android:text="@string/user_home_fans" />
            <TextView
                style="@style/userhomenavbottomnum"/>
            <LinearLayout
                style="@style/userhomenavbottomline"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserHomeNav_gag"
                style="@style/userhomenav"
                android:text="@string/user_home_post" />
            <TextView
                style="@style/userhomenavbottomnum"/>
            <LinearLayout
                style="@style/userhomenavbottomline"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserHomeNav_focus"
                style="@style/userhomenav"
                android:text="@string/user_home_focus" />
            <TextView
                style="@style/userhomenavbottomnum"/>
            <LinearLayout
                style="@style/userhomenavbottomline"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserHeadHome"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/headbefore"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/tvUserNameHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/aboutus"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/motto"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/tvSignatureHome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUserHomeFocus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/focusbuttonstate"
            android:text="@string/focus"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>